added grep to tutorial

--- a/intro_awk_spring2021/index.ipynb
+++ b/intro_awk_spring2021/index.ipynb
@@ -13,7 +13,151 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### What is awk?\n",
+    "\n",
+    "## Manipulating files with grep\n",
+    "--------\n",
+    "In this lesson, we will explore how we can use basic command line tools to parse, subset, and rearrange common file types you will come across in bioinformatics. If \"put liquid from one tube into another tube\" is the core of molecular biology, then \"make text file look like another text file\" is the core of computational biology!\n",
+    "\n",
+    "**grep** is a powerful command-line search tools that is included as part of most Unix-like systems. It is one of the most useful tools in bioinformatics! At the most basic level, grep searches for a string of characters that match a pattern and will print lines containing a match. Basic syntax is:  \n",
+    "\n",
+    "`grep 'pattern' file_to_search`  \n",
+    "\n",
+    "By default, grep will match any part of the string, so for example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grep 'dog' data/sample.txt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This will match the line, as will:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grep 'do' data/sample.txt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It is important to be mindful of partial matching, as you can end up selecting lines that you do not intend! This is just the most basic use of grep however, and there are a huge number of ways to modify its behavior. Here are just a few useful examples:\n",
+    "\n",
+    "`grep -w` matches *entire words*.\n",
+    "- So in the above example:  \n",
+    "`grep -w 'dog' data/sample.txt` would match the string, but `grep -w 'do' data/sample.txt` would not.\n",
+    "\n",
+    "`grep -i` allows case-insensitive matches\n",
+    "- In the above example, `grep -i 'DOG'` would still match the line\n",
+    "\n",
+    "`grep -v` *inverts*, returning lines that *do not* match the pattern.\n",
+    "\n",
+    "`grep -o` returns only the matching words, not the entire line.\n",
+    "\n",
+    "`grep -c` counts the number of lines that match the pattern.\n",
+    "- Equivalent to `grep 'pattern' file | wc -l`\n",
+    "\n",
+    "Print lines before/after a match:\n",
+    "- `grep -A [n]` returns matching line and *n* lines after match\n",
+    "- `grep -B [n]` returns matching line and *n* lines before match\n",
+    "- `grep -C [n]` returns matching line and *n* lines before *and* after match\n",
+    "\n",
+    "---\n",
+    "\n",
+    "The real strength of grep is that we can combine these different arguments together. For instance, let's say we have a single-line fasta file and we want to quickly pull out the X chromosome:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grep -w -A 1 '>X' data/dmel-subset-chromosomes.fasta"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This code will match line that start with \">X\" (using the -w flag to match whole word only) and will also print the line *after* the match as well using the `-A 1` flag (i.e. the sequence line of our fasta file; note this will not work if fasta file is multi-line!).\n",
+    "\n",
+    "There are many other functions of grep! When in doubt, remember you can check the help page using `man grep`...or just by using google :)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Pattern matching with regular expressions\n",
+    "Regular expressions, aka \"regex\", are patterns that describe sets of strings. In other words, they allow you to match complex patterns with grep, not just exact matches. Regex is extremely powerful, but can also get (very) complicated, so we'll just stick to a few basic uses.\n",
+    "\n",
+    "Regex has certain meta-characters that are reserved for special uses:\n",
+    "\n",
+    "```\n",
+    "^: matches pattern at start of string\n",
+    "$: matches pattern at end of string\n",
+    ".: matches any character except new lines\n",
+    "[]: matches any of enclose characters\n",
+    "[^]: matches any characters *except* ones enclosed (note: is different from ^)\n",
+    "\\: \"escapes\" meta-characters, allows literal matching\n",
+    "```\n",
+    "\n",
+    "Note that if we want to match any of these special characters literally, we would need to use a \"\\\\\" to escape it first. So if we wanted to literally match a period (\".\") character we would run:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grep '\\.' data/Homo_sapiens.GRCh38.subset.gff3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "One example of how regex can come in handy is using the ^ special character to quickly count how many sequences are in a FASTA file, which we would do as follows:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grep -c '^>' data/dmel-subset-chromosomes.fasta"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This command matches lines in the FASTA file that start with a \">\" character, i.e. the header lines, and uses the -c argument to count how many matches!\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## What is awk?\n",
     "Invented in the 1970's, [awk](https://en.wikipedia.org/wiki/AWK) is a scripting language included in most Unix-like operating systems. It specializes in one-liner programs and manipulating text files.\n",
     "\n",
     "In many cases, if you're parsing information from a text file (such as a [BED](https://en.wikipedia.org/wiki/BED_(file_format)) file, [FASTA](https://en.wikipedia.org/wiki/FASTA) file, etc.), you could write a Python script...or you could do it with awk in a single line!\n",
@@ -29,18 +173,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-1-722aacddb210>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-722aacddb210>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    awk '{print}' data/hg38.genome | head\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "awk '{print}' data/hg38.genome | head"
    ]
@@ -358,8 +493,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "With this command, `!/^#/` is a pattern (like `BEGIN` or `END`) that tell awk to execute the print statement when the start of the line does not match a `#`. Use whichever makes the most sense to you!\n",
-    "\n",
+    "With this command, `!/^#/` is a pattern (like `BEGIN` or `END`) that tell awk to execute the print statement when the start of the line does not match a `#`. Use whichever makes the most sense to you!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Practice\n",
     "Using awk:\n",
     "\n",
