--- a/intro_awk_spring2021/index.ipynb
+++ b/intro_awk_spring2021/index.ipynb
@@ -16,7 +16,7 @@
     "\n",
     "## Manipulating files with grep\n",
     "--------\n",
-    "In this lesson, we will explore how we can use basic command line tools to parse, subset, and rearrange common file types you will come across in bioinformatics. If \"put liquid from one tube into another tube\" is the core of molecular biology, then \"make text file look like another text file\" is the core of computational biology!\n",
+    "In this lesson, we will explore how we can use basic command line tools to parse, subset, and rearrange common file types you will come across in bioinformatics.\n",
     "\n",
     "**grep** is a powerful command-line search tools that is included as part of most Unix-like systems. It is one of the most useful tools in bioinformatics! At the most basic level, grep searches for a string of characters that match a pattern and will print lines containing a match. Basic syntax is:  \n",
     "\n",
@@ -125,7 +125,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "grep '\\.' data/Homo_sapiens.GRCh38.subset.gff3"
+    "grep '\\.' data/Homo_sapiens.GRCh38.subset.gff3 | head"
    ]
   },
   {
@@ -388,7 +388,7 @@
    "source": [
     "**Note**: this is technically safer than using grep, as you don't have to worry about accidentally counting the quality line.\n",
     "\n",
-    "- Only print annotations on a specific scaffold (chr1) that fall between 1Mb and 2Mb from a BED annotation file. First let's look at the first few lines of the file using `head`:"
+    "- Only print annotations on a specific scaffold (chr1) that fall between 1Mb and 2Mb from a BED annotation file (a common file type that lists genomic coordinates of certain features). First let's look at the first few lines of the file using `head`:"
    ]
   },
   {
@@ -427,7 +427,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Only print lines of GFF annotation file that match the string \"exon\" in their third column. Again, let's look at the first few lines of the file:"
+    "- Another common type of annotation file is a Genome Feature File (GFF), which also lists coordinates. Let's look at the first few lines of the file:"
    ]
   },
   {
@@ -443,7 +443,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Then subset the file:"
+    "Now let's subset the file and only print lines that match the string \"exon\" in their third column:"
    ]
   },
   {
@@ -475,7 +475,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Note**: remember that BED and GFF files have different coordinate systems, i.e. BED start coordinate is 0 based, half-open, GFF is 1-based inclusive! Also, we are first using grep to skip the header lines in the GFF file.\n",
+    "**Note**: Annoyingly, BED and GFF files have different coordinate systems, i.e. BED start coordinate is 0 based, half-open, GFF is 1-based inclusive! Also, we are first using grep to skip the header lines in the GFF file.\n",
     "\n",
     "Alternatively, you could do the whole thing with only awk, no grep required:"
    ]
@@ -533,9 +533,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -576,9 +574,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
+    "tags": []
    },
    "outputs": [],
    "source": [
